Fixed missing coveralls profile

--- a/com.ciodar.scoreboard/pom.xml
+++ b/com.ciodar.scoreboard/pom.xml
@@ -103,6 +103,30 @@
 				</plugins>
 			</build>
 		</profile>
+		<!--remote coverage-->
+		<profile>
+			<id>coveralls</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.jacoco</groupId>
+						<artifactId>jacoco-maven-plugin</artifactId>
+					</plugin>
+					<plugin>
+						<groupId>org.eluder.coveralls</groupId>
+						<artifactId>coveralls-maven-plugin</artifactId>
+						<executions>
+							<execution>
+								<phase>verify</phase>
+								<goals>
+									<goal>report</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
 		<profile>
 			<id>mutation-testing</id>
 			<build>
