--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -3,50 +3,53 @@
 name: Java CI with Maven in Linux
 
 on:
-  push:
-  pull_request:
+   push:
+   - master
+   - task*
+   pull_request:
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    env:
-      workdir: com.ciodar.scoreboard
-    strategy:
-      # test against several Java versions:
-      matrix:
-        include:
-          - java: 8
-          - java: 17
-            additional-maven-args: >
-               -Pcoveralls -Pmutation-testing 
-               -DpullRequest=${{ github.event.pull_request.number }}}
-    name: Build with Java ${{ matrix.java }} on Linux
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK ${{ matrix.java }}
-      uses: actions/setup-java@v1
-      with:
-        java-version: ${{ matrix.java }}
-    - name: Cache Maven packages
-      uses: actions/cache@v2
-      with:
-        path: ~/.m2
-        key: ${{ runner.os }}-m2-jdk${{ matrix.java }}-${{ hashFiles('**/pom.xml', '**/*.yml') }}
-        restore-keys: ${{ runner.os }}-m2-
-    - name: Build with Maven
-      run: >
-        mvn verify ${{ matrix.additional-maven-args }}
-      working-directory: ${{ env.workdir }}
+   build:
+      runs-on: ubuntu-latest
       env:
-        COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
-    - name: Generate JUnit Report
-      run: >
-        mvn surefire-report:report-only site:site -DgenerateReports=false
-      working-directory: ${{ env.workdir }}
-      if: ${{ always() }}
-    - name: Archive JUnit Report
-      uses: actions/upload-artifact@v2
-      if: ${{ always() }}
-      with:
-        name: surefire-report-jdk-${{ matrix.java }}
-        path: '**/target/site'
+         workdir: com.ciodar.scoreboard
+      strategy:
+         matrix:
+            include:
+            # test against several Java versions - Java 17 for Sonar
+            -  java: 8
+            -  java: 17
+               additional-maven-args: >
+                  -Pcoveralls 
+                  -Pmutation-testing  
+                  -DpullRequest=${{ github.event.pull_request.number }}}
+      name: Build with Java ${{ matrix.java }} on Linux
+      steps:
+      -  uses: actions/checkout@v2
+      -  name: Set up JDK ${{ matrix.java }}
+         uses: actions/setup-java@v1
+         with:
+            java-version: ${{ matrix.java }}
+      -  name: Cache Maven packages
+         uses: actions/cache@v2
+         with:
+            path: ~/.m2
+            key: ${{ runner.os }}-m2-jdk${{ matrix.java }}-${{ hashFiles('**/pom.xml', '**/*.yml') }}
+            restore-keys: ${{ runner.os }}-m2-
+      -  name: Build with Maven
+         run: |
+            mvn verify ${{ matrix.additional-maven-args }}
+         working-directory: ${{ env.workdir }}
+         env:
+            COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
+      -  name: Generate JUnit Report
+         run: |
+            mvn surefire-report:report-only site:site -DgenerateReports=false
+         working-directory: ${{ env.workdir }}
+         if: ${{ always() }}
+      -  name: Archive JUnit Report
+         uses: actions/upload-artifact@v3
+         if: ${{ always() }}
+         with:
+            name: surefire-report-jdk-${{ matrix.java }}
+            path: '**/target/site'
