--- a/com.ciodar.scoreboard/pom.xml
+++ b/com.ciodar.scoreboard/pom.xml
@@ -1,96 +1,106 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.ciodar</groupId>
-  <artifactId>scoreboard</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+	<groupId>com.ciodar</groupId>
+	<artifactId>scoreboard</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
 
-  <name>scoreboard</name>
+	<name>scoreboard</name>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-  </properties>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<!--sonarcloud properties-->
+		<sonar.organization>ciodar</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+	</properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 
-  <build>
-    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
-      <plugins>
-		  <plugin>
-				<artifactId>maven-surefire-report-plugin</artifactId>
-				<version>2.22.2</version>
-			</plugin>
-		  <plugin>
-			<artifactId>maven-site-plugin</artifactId>
-			<version>3.9.1</version>
-		</plugin>
-        <plugin>
-			<groupId>org.jacoco</groupId>
-			<artifactId>jacoco-maven-plugin</artifactId>
-			<version>0.8.11</version>
-			<!-- Excludes main class from coverage -->
-			<configuration>
-				<excludes>
-					<exclude>**/App.*</exclude>
-				</excludes>
-			</configuration>
-			<executions>
-				<execution>
-					<goals>
-						<goal>prepare-agent</goal>
-						<goal>report</goal>
-					</goals>
-				</execution>
-			</executions>
-		</plugin>
-		<plugin>
-			<groupId>org.eluder.coveralls</groupId>
-			<artifactId>coveralls-maven-plugin</artifactId>
-			<version>4.3.0</version>
-			<dependencies>
-				<dependency>
-					<groupId>javax.xml.bind</groupId>
-					<artifactId>jaxb-api</artifactId>
-					<version>2.3.1</version>
-				</dependency>
-			</dependencies>
-		</plugin>
-		<plugin>
-			<groupId>org.pitest</groupId>
-			<artifactId>pitest-maven</artifactId>
-			<version>1.15.3</version>
-			<configuration>
-				<reportsDirectory>
-					${project.build.directory}/site/pit-reports</reportsDirectory>
-				<sourceDataFormats>
-					<sourceDataFormat>HTML</sourceDataFormat>
-				</sourceDataFormats>
-				<excludedClasses>
-				    <param>com.ciodar.scoreboard.App*</param>
-				</excludedClasses>
-				<mutators>
-					<mutator>DEFAULTS</mutator>
-				</mutators>
-				<mutationThreshold>100</mutationThreshold>
-			</configuration>
-		</plugin>
-      </plugins>
-    </pluginManagement>
-  </build>
-  <profiles>
-	  	<!--local coverage-->
+	<build>
+		<pluginManagement><!-- lock down plugins versions to avoid using Maven
+			defaults (may be moved to parent pom) -->
+			<plugins>
+				<plugin>
+					<artifactId>maven-surefire-report-plugin</artifactId>
+					<version>2.22.2</version>
+				</plugin>
+				<plugin>
+					<artifactId>maven-site-plugin</artifactId>
+					<version>3.9.1</version>
+				</plugin>
+				<plugin>
+					<groupId>org.jacoco</groupId>
+					<artifactId>jacoco-maven-plugin</artifactId>
+					<version>0.8.11</version>
+					<!-- Excludes main class from coverage -->
+					<configuration>
+						<excludes>
+							<exclude>**/App.*</exclude>
+						</excludes>
+					</configuration>
+					<executions>
+						<execution>
+							<goals>
+								<goal>prepare-agent</goal>
+								<goal>report</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.eluder.coveralls</groupId>
+					<artifactId>coveralls-maven-plugin</artifactId>
+					<version>4.3.0</version>
+					<dependencies>
+						<dependency>
+							<groupId>javax.xml.bind</groupId>
+							<artifactId>jaxb-api</artifactId>
+							<version>2.3.1</version>
+						</dependency>
+					</dependencies>
+				</plugin>
+				<plugin>
+					<groupId>org.pitest</groupId>
+					<artifactId>pitest-maven</artifactId>
+					<version>1.15.3</version>
+					<configuration>
+						<reportsDirectory>
+							${project.build.directory}/site/pit-reports</reportsDirectory>
+						<sourceDataFormats>
+							<sourceDataFormat>HTML</sourceDataFormat>
+						</sourceDataFormats>
+						<excludedClasses>
+							<param>com.ciodar.scoreboard.App*</param>
+						</excludedClasses>
+						<mutators>
+							<mutator>DEFAULTS</mutator>
+						</mutators>
+						<mutationThreshold>100</mutationThreshold>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.sonarsource.scanner.maven</groupId>
+					<artifactId>sonar-maven-plugin</artifactId>
+					<version>3.8.0.2131</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
+	<profiles>
+		<!--local coverage-->
 		<profile>
 			<id>jacoco</id>
 			<build>
@@ -146,5 +156,5 @@
 				</plugins>
 			</build>
 		</profile>
-  </profiles>
+	</profiles>
 </project>
