--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,8 +22,10 @@ jobs:
             -  java: 17
                additional-maven-args: >
                   -Pcoveralls  
-                  -Pmutation-testing   
+                  -Pmutation-testing 
+                  sonar:sonar  
                   -DpullRequest=${{ github.event.pull_request.number }}}
+                  -Dsonar.projectKey=ciodar_tdd-scoreboard
       name: Build with Java ${{ matrix.java }} on Linux
       steps:
       -  uses: actions/checkout@v2
@@ -31,18 +33,24 @@ jobs:
          uses: actions/setup-java@v1
          with:
             java-version: ${{ matrix.java }}
-      -  name: Cache Maven packages
-         uses: actions/cache@v2
+      - name: Cache SonarCloud packages
+         uses: actions/cache@v3
          with:
-            path: ~/.m2
-            key: ${{ runner.os }}-m2-jdk${{ matrix.java }}-${{ hashFiles('**/pom.xml', '**/*.yml') }}
-            restore-keys: ${{ runner.os }}-m2-
+           path: ~/.sonar/cache
+           key: ${{ runner.os }}-sonar-jdk${{ matrix.java }}
+      - name: Cache Maven & SonarCloud packages
+        uses: actions/cache@v2
+        with:
+           path: ~/.m2
+           key: ${{ runner.os }}-m2-jdk${{ matrix.java }}-${{ hashFiles('**/pom.xml', '**/*.yml') }}
+           restore-keys: ${{ runner.os }}-m2-
       -  name: Build with Maven
          run: |
             mvn verify ${{ matrix.additional-maven-args }}
          working-directory: ${{ env.workdir }}
          env:
             COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
+            SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       -  name: Generate JUnit Report
          run: |
             mvn surefire-report:report-only site:site -DgenerateReports=false
