--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -8,6 +8,7 @@ on:
       - master
       - task*
    pull_request:
+      types: [opened, synchronize, reopened]
 
 jobs:
    build:
@@ -23,6 +24,7 @@ jobs:
                additional-maven-args: >
                   -Pcoveralls  
                   -Pmutation-testing sonar:sonar  
+                  -DrepoToken=$COVERALLS_REPO_TOKEN
                   -DpullRequest=${{ github.event.pull_request.number }}
                   -Dsonar.projectKey=ciodar_tdd-scoreboard
       name: Build with Java ${{ matrix.java }} on Linux
