--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,8 +22,7 @@ jobs:
             -  java: 8
             -  java: 17
                additional-maven-args: >
-                  -Pcoveralls  
-                  -Pmutation-testing sonar:sonar  
+                  -Pcoveralls sonar:sonar  
                   -DrepoToken=$COVERALLS_REPO_TOKEN
                   -DpullRequest=${{ github.event.pull_request.number }}
                   -Dsonar.projectKey=ciodar_tdd-scoreboard
